2006-04-25  Elijah Newren  <newren gmail com>

	* versions-stable:
	* smoketesting/sample-tarball-stable.jhbuildrc:
	* smoketesting/tarball-conversion-stable.config:
	Renamed from -2-12 to -stable, copied the 2.14 versions over them
	since that's the stable branch now, and updated limits to be
	relevant for the 2.14 versions.

	* smoketesting/sample-tarball.jhbuildrc:
	* smoketesting/tarball-conversion.config:
	Updates for making 2.15.1 moduleset

2006-04-12  Elijah Newren  <newren gmail com>

	* versions:
	* smoketesting/sample-tarball.jhbuildrc:
	* smoketesting/tarball-conversion.config:
	Update for Gnome 2.14.1

2006-03-15  Elijah Newren  <newren gmail com>

	* versions:
	* smoketesting/sample-tarball.jhbuildrc:
	Update for Gnome 2.14.0

2006-02-28  Elijah Newren  <newren gmail com>

	* versions:
	* smoketesting/sample-tarball.jhbuildrc:
	Update for Gnome 2.13.92

2006-02-20  Elijah Newren  <newren gmail com>

	* smoketesting/tarball-conversion.config:
	Shaun renamed gnome2-user-docs back to gnome-user-docs.

2006-02-15  Vincent Untz  <vuntz@gnome.org>

	* versions:
	Update for Gnome 2.13.91

2006-02-14  Elijah Newren  <newren gmail com>

	* smoketesting/tarball-conversion.config:
	libnotify didn't make 2.14 after all; remove it from the whitelist
	and download locations

2006-02-14  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/tarball-conversion.config:
	Use the 2.6 branch for gtk-engines.

	* smoketesting/sample-tarball.jhbuildrc:
	Update for Gnome 2.13.91

2006-02-08  Elijah Newren  <newren gmail com>

	* versions-2-12:
	* smoketesting/sample-tarball-2-12.jhbuildrc:
	* smoketesting/tarball-conversion-2-12.config:
	Update for Gnome 2.12.3.

2006-02-01  Elijah Newren  <newren gmail com>

	* versions:
	* smoketesting/sample-tarball.jhbuildrc:
	Update for Gnome 2.13.90

	* release_set_scripts/release-suites:
	Remove the ugly permissions warnings (and actually fix up
	permissions in all the places its needed too), so that people will