@@ -109,7 +109,6 @@
     <package name="libxml2"                 set="platform"/>
     <package name="libxslt"                 set="platform"/>
     <package name="pango"                   set="platform"/>
-    <package name="pkg-config"              set="platform"/>
     ## DESKTOP
     <package name="bug-buddy"               set="desktop"/>
     <package name="control-center"          set="desktop"/>
@@ -189,33 +188,33 @@
     <package name="sabayon"                 set="admin"/>
     ## BINDINGS
     # C++
-    <package name="glibmm"                  set="bindings"/>
-    <package name="gtkmm"                   set="bindings"/>
-    <package name="libglademm"              set="bindings"/>
-    <package name="gconfmm"                 set="bindings"/>
-    <package name="libgnomecanvasmm"        set="bindings"/>
-    <package name="gnome-vfsmm"             set="bindings"/>
-    <package name="libgnomemm"              set="bindings"/>
-    <package name="libgnomeuimm"            set="bindings"/>
-    <package name="libxml++"                set="bindings"/>
-    <package name="libsigc++"               set="bindings"/>
+    <package name="glibmm"             subdir="c++"    set="bindings"/>
+    <package name="gtkmm"              subdir="c++"    set="bindings"/>
+    <package name="libglademm"         subdir="c++"    set="bindings"/>
+    <package name="gconfmm"            subdir="c++"    set="bindings"/>
+    <package name="libgnomecanvasmm"   subdir="c++"    set="bindings"/>
+    <package name="gnome-vfsmm"        subdir="c++"    set="bindings"/>
+    <package name="libgnomemm"         subdir="c++"    set="bindings"/>
+    <package name="libgnomeuimm"       subdir="c++"    set="bindings"/>
+    <package name="libxml++"           subdir="c++"    set="bindings"/>
+    <package name="libsigc++"          subdir="c++"    set="bindings"/>
     # Java
-    <package name="libgtk-java"             set="bindings"/>
-    <package name="libgnome-java"           set="bindings"/>
-    <package name="libgconf-java"           set="bindings"/>
-    <package name="libglade-java"           set="bindings"/>
+    <package name="libgtk-java"        subdir="java"   set="bindings"/>
+    <package name="libgnome-java"      subdir="java"   set="bindings"/>
+    <package name="libgconf-java"      subdir="java"   set="bindings"/>
+    <package name="libglade-java"      subdir="java"   set="bindings"/>
     # Perl
-    <package name="Glib"                    set="bindings"/>
-    <package name="Gnome2"                  set="bindings"/>
-    <package name="Gnome2-Canvas"           set="bindings"/>
-    <package name="Gnome2-GConf"            set="bindings"/>
-    <package name="Gnome2-VFS"              set="bindings"/>
-    <package name="Gtk2"                    set="bindings"/>
-    <package name="Gtk2-GladeXML"           set="bindings"/>
+    <package name="Glib"               subdir="perl"   set="bindings"/>
+    <package name="Gnome2"             subdir="perl"   set="bindings"/>
+    <package name="Gnome2-Canvas"      subdir="perl"   set="bindings"/>
+    <package name="Gnome2-GConf"       subdir="perl"   set="bindings"/>
+    <package name="Gnome2-VFS"         subdir="perl"   set="bindings"/>
+    <package name="Gtk2"               subdir="perl"   set="bindings"/>
+    <package name="Gtk2-GladeXML"      subdir="perl"   set="bindings"/>
     # Python
-    <package name="pygobject"               set="bindings"/>
-    <package name="pygtk"                   set="bindings"/>
-    <package name="gnome-python"            set="bindings"/>
-    <package name="pyorbit"                 set="bindings"/>
+    <package name="pygobject"          subdir="python" set="bindings"/>
+    <package name="pygtk"              subdir="python" set="bindings"/>
+    <package name="gnome-python"       subdir="python" set="bindings"/>
+    <package name="pyorbit"            subdir="python" set="bindings"/>
   </whitelist>
 </conversioninfo>
